# Norvigs-Spelling-Corrector

./: .#spelling.hs  LICENSE  Main.hs  Norvigs-Spelling-Corrector.cabal  README.md  Spelling.hs  spelling.hs
execs/: Main.hs
src/: Paths_Norvigs_Spelling_Corrector.hs  Spelling.hs
