name:                Norvigs-Spelling-Corrector
version:             0.1.0.0
synopsis:            A Haskell implementation of Peter Norvig's spelling corrector
-- description:
homepage:            https://github.com/MarcoSero/Norvigs-Spelling-Corrector
license:             MIT
license-file:        LICENSE
author:              Marco Sero
maintainer:          sero.marco@gmail.com
-- copyright:
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-files:          big.txt

Library
  exposed-modules:     Spelling
  build-depends:       base >=4.7 && <4.8,
                       bytestring >=0.10 && <0.11,
                       containers >=0.5 && <0.6
  hs-source-dirs:      src
  default-language:    Haskell2010

executable Norvigs-Spelling-Corrector
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       bytestring >=0.10 && <0.11,
                       containers >=0.5 && <0.6,
                       Norvigs-Spelling-Corrector
  hs-source-dirs:      execs
  default-language:    Haskell2010
